logs/Slang/generated/yosys/simple_repwhile.sv.log
name: simple_repwhile
description: Tests imported from yosys
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/simple/repwhile.v
should_fail: 0
tags: yosys
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/simple/repwhile.v:4:3: error: language feature not yet supported
		input [31:0] value;
		^~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/simple/repwhile.v:7:11: error: use of undeclared identifier 'value'
			while (value > 0) begin
			       ^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/simple/repwhile.v:8:5: error: use of undeclared identifier 'value'
				value = value >> 1;
				^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/simple/repwhile.v:8:13: error: use of undeclared identifier 'value'
				value = value >> 1;
				        ^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/simple/repwhile.v:15:3: error: language feature not yet supported
		input [7:0] value;
		^~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/simple/repwhile.v:18:12: error: use of undeclared identifier 'value'
			repeat (value)
			        ^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/simple/repwhile.v:29:18: error: too many arguments to subroutine call; expected 0 but 1 were provided
			y_table[i] <= mylog2(i);
			              ^~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/simple/repwhile.v:30:18: error: too many arguments to subroutine call; expected 0 but 1 were provided
			x_table[i] <= myexp2(i);
			              ^~~~~~
